--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API to interact with the Clarify Models and the Client Side App",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Ayush Shekhar",
   "license": "MIT",
